{
    "@@locale": "en_US",
    "homePageAppBarTitle": "Home Page"
}
