{
    "@@locale": "ur_PK",
    "homePageAppBarTitle": "مرکزی صفحہ"
}
